# eve-echoes-tools

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Cargo.toml  INSTALLATION.md  README.md  requirements-lock.txt  requirements.txt
docker/: Dockerfile  build.sh  cmd.sh
fsd-converter/: Cargo.toml
fsd-converter/src/: main.rs
fsd2json/: Cargo.toml  README.md
fsd2json/src/: main.rs
scripts/: decrypt_evem.py  docker_fix_xdis.py  dump_static_data.py  text_lookup.py
