[package]
name = "fsd2json"
version = "0.1.0"
authors = ["Alexander Guettler <alexander@guettler.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = "1.0"
serde-pickle = {git = "https://github.com/xforce/serde-pickle.git"}
bytesize = "1.0"
byteorder = "1"
log = "0.4"
simple_logger = "1.6"
serde_json = "1"
num-bigint = "0.2.4"
num-traits = "0.2.10"