[package]
name = "fsd2json"
version = "0.1.0"
authors = ["Alexander Guettler <alexander@guettler.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = "1.0"
serde-pickle = {git = "https://github.com/xforce/serde-pickle.git"}
bytesize = "1.0"
byteorder = "1"
log = "0.4"
simple_logger = "1"
serde_json = {version = "1", features = ["arbitrary_precision"]}
num-bigint = "0.2.4"
num-traits = "0.2.10"